name: MazesAndFun
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
synopsis: Makeing mazes with functional programming
author: Juan Manuel Gimeno Illa
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.0
Executable MazesAndFun
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      fgl -any,
      blaze-svg -any,
      mtl -any
  other-modules:
      SVG
      Grid
